--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Curso Gratís</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia officiis, aperiam tempora mollitia est quos consectetur sapiente reiciendis enim, blanditiis, eveniet veniam quod rem! Assumenda sequi aliquid incidunt ad aspernatur.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima reiciendis similique quos quia exercitationem impedit quasi ut eaque cupiditate, illum rerum ad perferendis labore inventore aspernatur in consectetur unde quis?</p>
         </article>
     </main>
     
