--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Curso Gratís</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML e CSS">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia officiis, aperiam tempora mollitia est quos consectetur sapiente reiciendis enim, blanditiis, eveniet veniam quod rem! Assumenda sequi aliquid incidunt ad aspernatur.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTMLL e CSS</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado"src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima reiciendis similique quos quia exercitationem impedit quasi ut eaque cupiditate, illum rerum ad perferendis labore inventore aspernatur in consectetur unde quis?</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
