--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
+    <p>Obrigado por acessar nosso site</p>
     
 </body>
 </html>
