--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique incidunt ad sequi distinctio fugiat aliquam unde fuga! Vitae maxime quia obcaecati similique, quasi, consequuntur, ad voluptas ratione porro amet praesentium!</p>
     
 </body>
 </html>
